<resources>
    <string name="app_name" translatable="false">Scanne</string>
    <string name="app_intent_name" translatable="false">Scanne</string>
    <string name="revenue_cat_sdk_key" translatable="false">ietAnEOYYcvAFEjwMSPeOIyLVBJXzacC</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-6888914413719386~2473486109</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-6888914413719386/7135837539</string>
    <string name="admob_interestitial_id" translatable="false">ca-app-pub-6888914413719386/2757786438</string>
    <string name="admob_app_open_id" translatable="false">ca-app-pub-6888914413719386/9349699579</string>
    <string name="admob_rewarded_id" translatable="false">ca-app-pub-6888914413719386/8343416262</string>
    <string name="admob_rewarded_int_id" translatable="false">ca-app-pub-6888914413719386/1586436221</string>
    <string name="server_client_id" translatable="false">167097838064-v671qtg5olce9afm7k4q26cvrj647ob3.apps.googleusercontent.com</string>
    <string name="lbl_string_apply">Apply</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_left">Left</string>
    <string name="lbl_right">Right</string>
    <string name="lbl_crop">Crop</string>
    <string name="lbl_camera_unavailable">Camera is not available (in use or does not exist).\nPlease close the apps that may use camera.</string>
    <string name="lbl_zoom_ratio_value">Zoom: %1.2fx</string>
    <string name="lbl_open_photo_preview">Open preview photo after shot</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_hdr">HDR</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_focus_mode">Focus mode</string>
    <string name="lbl_ratio">Ratio</string>
    <string name="lbl_quality">Quality</string>
    <string name="lbl_take_another">Take another</string>
    <string name="lbl_photo_crop">Photo crop</string>
    <string name="lbl_photo_preview">lbl_photo_preview</string>
    <string name="original">Original</string>
    <string name="magic_color">Magic Color</string>
    <string name="gray_mode">Gray Mode</string>
    <string name="b_amp_w"><![CDATA[B&W]]></string>
    <string name="single_mode">Single Mode</string>
    <string name="batch_mode">Batch Mode</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="import_from_gallery">Import from gallery</string>
    <string name="rate_us">Rate us</string>
    <string name="enter_name">Enter name…</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="share_pdf">Share PDF</string>
    <string name="share_pdf_ocr">Share PDF (OCR)</string>
    <string name="share_images">Share images</string>
    <string name="love_our_document_scanner">Love this Document Scanner?</string>
    <string name="upgrade_pro_message">Consider Upgrading yourself to PRO</string>
    <string name="lifetime">Lifetime</string>
    <string name="yearly">Yearly</string>
    <string name="monthly">Monthly</string>
    <string name="downloading">Downloading…</string>
    <string name="downloading_language">Downloading language data…</string>
    <string name="percentage_downloaded">% of total:</string>
    <string name="you_are_not_connected_to_internet">You are not connected to internet</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="download_description">For proper functioning of OCR functionality, some additional data needs to be downloaded to your device.\nDo you want to download selected language(%s) data? You can download more languages from app settings</string>
    <string name="training_data_missing">Language data missing!</string>
    <string name="select_language">Select Language</string>
    <string name="create_new">Create New</string>
    <string name="documents_list_empty">Your Documents list is Empty</string>
    <string name="no_notes_exists">No Notes Exist!</string>
    <string name="backup_now">Backup Now</string>
    <string name="restore_backup">Restore Backup</string>
    <string name="backup_message_sync">Backup Your Scanned Documents easily on Google Drive with seamless Synchronization</string>
    <string name="back">Back</string>
    <string name="ocr">OCR</string>
    <string name="image">Image</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="start_sync">Start Sync</string>
    <string name="document_1">Document 1</string>
    <string name="rate_us_txt">Don\'t forget to rate us.</string>
    <string name="rate_us_desc">Press YES to rate or NO to exit</string>
    <string name="pro_member_message">You are a PRO Member!</string>
    <string name="req_cam_access_message">Scanne Requires Access to Camera</string>
    <string name="req_storage_access_message">Scanne Requires Access to Storage</string>
    <string name="req_media_access_message">Scanne Requires Access to Media</string>
    <string name="req_storage_cam_access_message">Scanne needs Storage and Camera permissions to work</string>
    <string name="watch_ads_message">You need to watch video ad to Proceed</string>
    <string name="premium_feature">Premium Feature</string>
    <string name="upgrade_pro_prompt">Please Upgrade to PRO</string>
    <string name="please_wait">Please Wait…</string>
    <string name="created_success_accuracy">Created Successfully with Accuracy: %s</string>
    <string name="error_occurred">An error occurred</string>
    <string name="already_logged_message">Already logged in as %s</string>
    <string name="scan_count">Scan %s</string>
    <string name="docs_count">%s Documents</string>
    <string name="delete_alert_title">Delete Document</string>
    <string name="delete_alert_message">Are you sure you want to delete?</string>
    <string name="rename_doc">Rename Document</string>
    <string name="enter_valid_name">Please enter a valid name</string>
    <string name="starting_sync">Starting Synchronization</string>
    <string name="error">Error</string>
    <string name="sync_error">An Error Occurred while synchronizing files with Google Drive</string>
    <string name="success">Success</string>
    <string name="sync_success">Synchronizing files with Google Drive was successful</string>
    <string name="fetching_data">Fetching data from server</string>
    <string name="share_notes">Share notes…</string>
    <string name="downloading_lang">Downloading Languages</string>
    <string name="total_lang_d_ct">A total of %s languages</string>
    <string name="download_failed">Download Failed</string>
    <string name="download_failed_lang">Failed to download given language: %s</string>
    <string name="downloaded_num_lang">Downloaded %s Languages</string>
    <string name="downloading_n">Downloading %s</string>
    <string name="creating_pdf">Cooking a beautiful PDF for you</string>
    <string name="logged_out_message">You have been logged out</string>
    <string name="lang_downloaded">Languages downloaded successfully</string>
    <string name="languages">Languages</string>
    <string name="get_langs">Get More Languages</string>
    <string name="look_n_feel">Look and Feel</string>
    <string name="theme">Theme</string>
    <string name="theme_desc">Switch between Dark and Light mode</string>
    <string name="more">More</string>
    <string name="about_us">About Us</string>
    <string name="about_us_desc">Know more about us</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_desc">Contact us for any Payment or Refund related queries</string>
    <string name="leave_feedback">Leave a feedback</string>
    <string name="leave_feedback_desc">Report technical issues or suggest new features</string>
    <string name="rotation">Rotation</string>
    <string name="opacity">Opacity</string>
    <string name="brush">Brush</string>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Exit without saving the image?</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="save">Save</string>
    <string name="dontsave">Don\'t Save</string>
    <string name="no_signature_msg">You don\'t have any signatures. Tap to Add one</string>
    <string name="sign">Sign</string>
    <string name="crop_image_menu_rotate_right">Right</string>
    <string name="crop_image_menu_rotate_left">Left</string>
</resources>