<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UpgradePro">

    <ImageButton
        android:id="@+id/dismiss"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/ic_baseline_close_24"
        android:backgroundTint="@color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/lbl_close" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:gravity="center_horizontal"
        android:text="@string/love_our_document_scanner"
        android:textAppearance="?titleTextAppearance"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upgrade_pro_message"
        android:textAlignment="center"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp"
        android:gravity="center_horizontal" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/plans_container"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:id="@+id/monthly"
            android:text="@string/monthly"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="0dp" />
        <Button
            android:id="@+id/yearly"
            android:text="@string/yearly"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="0dp" />
        <Button
            android:id="@+id/lifetime"
            android:text="@string/lifetime"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="0dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>