<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NoteGroupActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/noteGroup_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/notegroup_layout"
        android:clipToPadding="false"
        android:padding="@dimen/item_offset"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_notes_exists"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textColor="@android:color/darker_gray"
        android:gravity="center"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="20dp"
        android:tint="@color/white"
        android:clickable="true"
        android:src="@drawable/ic_baseline_photo_camera_24"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:onClick="onCameraClicked"
        android:focusable="true"
        android:contentDescription="@string/create_new" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner_id" />

</RelativeLayout>
